data/derived/sp14/progs/unify/prog0064.ml.out
Characters 17-18:
  let _ = makeRand 1 2;;
                   ^
Error: This expression has type int but an expression was expected of type
         int * int
